--- a/crypto_tracker/lib/crypto_tracker_web/templates/layout/app.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/layout/app.html.eex
@@ -12,27 +12,30 @@
   </head>
 
   <body>
+    <nav role="navigation">
+        <ul class="nav nav-pills pull-right">
+          <%= if @current_user do %>
+            <span class="text-light">
+              <%= @current_user.email %> |
+              <%= link("logout", to: session_path(@conn, :logout), method: :delete) %>
+            </span>
+          <% else %>
+            <%= form_for @conn, session_path(@conn, :login), [as: "user", class: "form-inline w-75"], fn f -> %>
+              <%= text_input f, :email,  placeholder: "email", class: "form-control" %>
+              <input type="password" placeholder="password" class="form-control" name="password">
+              <%= submit "Log in", class: "btn btn-primary" %>
+              <%= link("Sign up", to: user_path(@conn, :new)) %>
+            <% end %>
+          <% end %>
+        </ul>
+    </nav>
+    
     <div class="container">
       <header class="header">
-        <nav role="navigation">
-            <ul class="nav nav-pills pull-right">
-              <%= if @current_user do %>
-                <span class="text-light">
-                  <%= @current_user.email %> |
-                  <%= link("logout", to: session_path(@conn, :logout), method: :delete) %>
-                </span>
-              <% else %>
-                <%= form_for @conn, session_path(@conn, :login), [as: "user", class: "form-inline w-75"], fn f -> %>
-                  <%= text_input f, :email,  placeholder: "email", class: "form-control" %>
-                  <input type="password" placeholder="password" class="form-control" name="password">
-                  <%= submit "Log in", class: "btn btn-primary" %>
-<%= link("Register", to: user_path(@conn, :new)) %>
-                <% end %>
-              <% end %>
-            </ul>
-        </nav>
+
         <span class="logo"></span>
       </header>
+
 
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
@@ -41,7 +44,7 @@
         <%= render @view_module, @view_template, assigns %>
       </main>
 
-    </div> <!-- /container -->
+    </div>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
