--- a/crypto_tracker/lib/crypto_tracker_web/templates/currency/index.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/currency/index.html.eex
@@ -1,36 +1,175 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-<h2>Listing Currencies</h2>
+<%= if @current_user do %>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        Bitcoin Price Chart
+      </h4>
+    </div>
+    <div class="panel-body">
+      <ul class="nav nav-tabs">
+        <li class="active">
+          <a data-toggle="tab" href="#1M">1M</a></li>
+        <li>
+          <a data-toggle="tab" href="#1Y">1Y</a></li>
+      </ul>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Name</th>
+      <div class="tab-content">
+        <div id="1M" class="tab-pane fade in active">
+          <canvas id="BTCChart"></canvas>
+        </div>
+        <div id="1Y" class="tab-pane fade">
+          <p>1y
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#btcNote">Notifications</a>
+        </h4>
+      </div>
+      <div id="btcNote" class="panel-collapse collapse">
+        <ul class="list-group">
+          <li class="list-group-item">
+            One
+            <a href="#">Delete</a>
+          </li>
+          <li class="list-group-item">
+            <div class="input-group">
+              <input type="text" placeholder="threshold"
+                                 class="form-control" name="threshold">
+              <input type="submit" value="Create" class="btn btn-primary">
+            </div>
+          </li>
+        </ul>
 
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
+      </div>
+    </div>
+  </div>
 
-<%= for currency <- @currencies do %>
-    <tr>
-      <td><%= currency.name %></td>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        Bitcoin Price Chart
+      </h4>
+    </div>
+    <div class="panel-body">
+      <ul class="nav nav-tabs">
+        <li class="active">
+          <a data-toggle="tab" href="#1M">1M</a></li>
+        <li>
+          <a data-toggle="tab" href="#1Y">1Y</a></li>
+      </ul>
 
-      <td class="text-right">
-        <span><%= link "Show", to: currency_path(@conn, :show, currency), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Edit", to: currency_path(@conn, :edit, currency), class: "btn btn-default btn-xs" %></span>
-        <span><%= link "Delete", to: currency_path(@conn, :delete, currency), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %></span>
-      </td>
-    </tr>
+      <div class="tab-content">
+        <div id="1M" class="tab-pane fade in active">
+          <canvas id="LTCChart"></canvas>
+        </div>
+        <div id="1Y" class="tab-pane fade">
+          <p>1y
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#btcNote">Notifications</a>
+        </h4>
+      </div>
+      <div id="btcNote" class="panel-collapse collapse">
+        <ul class="list-group">
+          <li class="list-group-item">
+            One
+            <a href="#">Delete</a>
+          </li>
+          <li class="list-group-item">
+            <div class="input-group">
+              <input type="text" placeholder="threshold"
+                                 class="form-control" name="threshold">
+              <input type="submit" value="Create" class="btn btn-primary">
+            </div>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        Bitcoin Price Chart
+      </h4>
+    </div>
+    <div class="panel-body">
+      <ul class="nav nav-tabs">
+        <li class="active">
+          <a data-toggle="tab" href="#1M">1M</a></li>
+        <li>
+          <a data-toggle="tab" href="#1Y">1Y</a></li>
+      </ul>
+
+      <div class="tab-content">
+        <div id="1M" class="tab-pane fade in active">
+          <canvas id="ETHChart"></canvas>
+        </div>
+        <div id="1Y" class="tab-pane fade">
+          <p>1y
+        </div>
+      </div>
+    </div>
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h4 class="panel-title">
+          <a data-toggle="collapse" href="#btcNote">Notifications</a>
+        </h4>
+      </div>
+      <div id="btcNote" class="panel-collapse collapse">
+        <ul class="list-group">
+          <li class="list-group-item">
+            One
+            <a href="#">Delete</a>
+          </li>
+          <li class="list-group-item">
+            <div class="input-group">
+              <input type="text" placeholder="threshold"
+                                 class="form-control" name="threshold">
+              <input type="submit" value="Create" class="btn btn-primary">
+            </div>
+          </li>
+        </ul>
+
+      </div>
+    </div>
+  </div>
+<% else %>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <canvas id="BTCChart"></canvas>
+  </div>
+  <div class="panel-footer">
+    Footer
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-body">
+    <canvas id="LTCChart"></canvas>
+  </div>
+  <div class="panel-footer">
+    Footer
+  </div>
+</div>
+
+<div class="panel panel-default">
+  <div class="panel-body">
+    <canvas id="ETHChart"></canvas>
+  </div>
+  <div class="panel-footer">
+    Footer
+  </div>
+</div>
 <% end %>
-  </tbody>
-</table>
-
-<span><%= link "New Currency", to: currency_path(@conn, :new) %></span>
-
-<canvas id="BTCChart"></canvas>
-
-<canvas id="LTCChart"></canvas>
-
-<canvas id="ETHChart"></canvas>
-
