--- a/crypto_tracker/lib/crypto_tracker_web/templates/layout/app.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/layout/app.html.eex
@@ -20,7 +20,7 @@
 
       <%= if @current_user do %>
         <span class="text-light">
-          <%= @current_user.email %> |
+          <%= link @current_user.email, to: user_path(@conn, :show, @current_user) %> |
           <%= link("logout", to: session_path(@conn, :logout), method: :delete) %>
         </span>
       <% else %>
@@ -49,7 +49,8 @@
           <% end %>
         </div>
 
-        <div class="col-sm-12 my-2">
+        <div class="col-sm-1 my-2"></div>
+        <div class="col-sm-10 my-2">
           <main role="main">
             <%= render @view_module, @view_template, assigns %>
           </main>
@@ -57,6 +58,7 @@
       </div>
     </div>
 
+    <script src="<%= static_path(@conn, "/node_modules/jquery/dist/jquery.min.js") %>"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
