--- a/crypto_tracker/lib/crypto_tracker_web/templates/currency/btc_notif_form.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/currency/btc_notif_form.html.eex
@@ -23,6 +23,6 @@
   </div>
 
   <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+    <%= submit "Create Notification", class: "btn btn-primary" %>
   </div>
 <% end %>
