--- a/crypto_tracker/lib/crypto_tracker_web/templates/currency/eth_notif_form.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/currency/eth_notif_form.html.eex
@@ -6,7 +6,7 @@
   <% end %>
 
   <div class="form-group hidden" type="hidden">
-    <%= text_input f, :currency, class: "form-control display:none", value: "BTC", type: "hidden" %>
+    <%= text_input f, :currency, class: "form-control display:none", value: "ETH", type: "hidden" %>
     <%= error_tag f, :currency %>
   </div>
 
@@ -23,6 +23,6 @@
   </div>
 
   <div class="form-group">
-    <%= submit "Submit", class: "btn btn-primary" %>
+    <%= submit "Create Notification", class: "btn btn-primary" %>
   </div>
 <% end %>
