--- a/crypto_tracker/lib/crypto_tracker_web/templates/currency/btc_notif_form.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/currency/btc_notif_form.html.eex
@@ -5,24 +5,29 @@
     </div>
   <% end %>
 
-  <div class="form-group hidden" type="hidden">
-    <%= text_input f, :currency, class: "form-control display:none", value: "BTC", type: "hidden" %>
-    <%= error_tag f, :currency %>
-  </div>
+  <div class="form-inline">
 
-  <div class="form-group">
-    <%= label f, :threshold, class: "control-label" %>
-    <%= number_input f, :threshold, step: "any", class: "form-control" %>
-    <%= error_tag f, :threshold %>
-  </div>
+    <div class="form-group hidden" type="hidden">
+      <%= text_input f, :currency, class: "form-control display:none", value: "BTC", type: "hidden" %>
+      <%= error_tag f, :currency %>
+    </div>
 
-  <div class="form-group">
-    <%= label f, :above, class: "control-label" %>
-    <%= checkbox f, :above, class: "checkbox" %>
-    <%= error_tag f, :above %>
-  </div>
+    Send me email when the price goes &nbsp;
 
-  <div class="form-group">
-    <%= submit "Create Notification", class: "btn btn-primary" %>
+    <div class="form-group">
+      <%= label f, :above, class: "control-label" %>
+      <%= checkbox f, :above, class: "checkbox" %>
+      <%= error_tag f, :above %>
+    </div>
+
+    <div class="form-group">
+      <%= label f, :threshold, class: "control-label" %>
+      <%= number_input f, :threshold, step: "any", class: "form-control" %>
+      <%= error_tag f, :threshold %>
+    </div>
+
+    <div class="form-group">
+      <%= submit "Create", class: "btn btn-primary mr-auto" %>
+    </div>
   </div>
 <% end %>
