--- a/crypto_tracker/lib/crypto_tracker_web/templates/currency/index.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/currency/index.html.eex
@@ -1,126 +1,162 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-
-<!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
-
 <!-- BTC CHART -->
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h4 class="panel-title">
-      Bitcoin Price Chart
-    </h4>
+<div class="card">
+  <div class="card-header">
+    <ul class="nav nav-pills card-header-pills">
+      <li class="mt-2 ml-2">
+        <h5 class="card-title">Bitcoin</h5>
+      </li>
+      <li class="nav-item ml-auto mt-1">
+        <a class="nav-link active small" data-toggle="pill" href="#BTC-1M">1M</a>
+      </li>
+      <li class="nav-item mt-1">
+        <a class="nav-link disabled small" data-toggle="pill" href="#BTC-1Y">1Y</a>
+      </li>
+    </ul>
   </div>
-  <div class="panel-body">
-    <div class="tab-pane fade in active">
+
+  <div class="tab-content">
+    <div id="BTC-1M" class="card-body">
       <canvas id="BTCChart"></canvas>
     </div>
   </div>
-  <%= if @current_user do %>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" href="#btcNote">Notifications</a>
-        </h4>
-      </div>
 
-      <div id="btcNote" class="panel-collapse collapse">
-        <ul class="list-group">
-          <%= for notif <- @btc_notifs do %>
+  <%= if @current_user do %>
+    <div class="card-footer">
+      <div>
+        <a data-toggle="collapse" href="#btcNote"><b>Notifications</b></a>
+      </div>
+    </div>
+
+    <div id="btcNote" class="collapse">
+      <ul class="list-group">
+        <%= for notif <- @btc_notifs do %>
+          <%= if notif.above do %>
             <li class="list-group-item">
-              Threshold: <%= notif.threshold %>
-              Above?: <%= notif.above %>
-              <span><%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
+              Send me email when the price goes <b>above $<%= notif.threshold %></b>.
+              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs pull-right" %>
+            </li>
+          <% else %>
+            <li class="list-group-item">
+              Send me email when the price goes <b>below $<b><%= notif.threshold %></b>.
+              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs pull-right" %>
             </li>
           <% end %>
+        <% end %>
 
-          <li class="list-group-item">
-            <%= render "btc_notif_form.html", Map.put(assigns, :action, notification_path(@conn, :create)) %>
-          </li>
-        </ul>
-      </div>
+        <li class="list-group-item">
+          <%= render "btc_notif_form.html", Map.put(assigns, :action, notification_path(@conn, :create)) %>
+        </li>
+      </ul>
     </div>
   <% end %>
 </div>
 
-
 <!-- ETH CHART -->
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h4 class="panel-title">
-      Ethereum Price Chart
-    </h4>
+<div class="card mt-4">
+  <div class="card-header">
+    <ul class="nav nav-pills card-header-pills">
+      <li class="mt-2 ml-2">
+        <h5 class="card-title">EThereum</h5>
+      </li>
+      <li class="nav-item ml-auto mt-1">
+        <a class="nav-link active small" data-toggle="pill" href="#ETH-1M">1M</a>
+      </li>
+      <li class="nav-item mt-1">
+        <a class="nav-link disabled small" data-toggle="pill" href="#ETH-1Y">1Y</a>
+      </li>
+    </ul>
   </div>
-  <div class="panel-body">
-    <div class="tab-pane fade in active">
+
+  <div class="tab-content">
+    <div id="ETH-1M" class="card-body">
       <canvas id="ETHChart"></canvas>
     </div>
   </div>
-  <%= if @current_user do %>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" href="#ethNote">Notifications</a>
-        </h4>
-      </div>
 
-      <div id="ethNote" class="panel-collapse collapse">
-        <ul class="list-group">
-          <%= for notif <- @eth_notifs do %>
+  <%= if @current_user do %>
+    <div class="card-footer">
+      <div>
+        <a data-toggle="collapse" href="#ethNote"><b>Notifications</b></a>
+      </div>
+    </div>
+
+    <div id="ethNote" class="collapse">
+      <ul class="list-group">
+        <%= for notif <- @eth_notifs do %>
+          <%= if notif.above do %>
             <li class="list-group-item">
-              Threshold: <%= notif.threshold %>
-              Above?: <%= notif.above %>
-              <span><%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
+              Send me email when the price goes <b>above $<%= notif.threshold %></b>.
+              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs pull-right" %>
+            </li>
+          <% else %>
+            <li class="list-group-item">
+              Send me email when the price goes <b>below $<b><%= notif.threshold %></b>.
+              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs pull-right" %>
             </li>
           <% end %>
-          <li class="list-group-item">
-            <%= render "eth_notif_form.html", Map.put(assigns, :action, notification_path(@conn, :create)) %>
-          </li>
-        </ul>
-      </div>
+        <% end %>
+
+        <li class="list-group-item">
+          <%= render "eth_notif_form.html", Map.put(assigns, :action, notification_path(@conn, :create)) %>
+        </li>
+      </ul>
     </div>
   <% end %>
 </div>
 
 <!-- LTC CHART -->
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h4 class="panel-title">
-      Litecoin Price Chart
-    </h4>
+<div class="card mt-5 mb-5">
+  <div class="card-header">
+    <ul class="nav nav-pills card-header-pills">
+      <li class="mt-2 ml-2">
+        <h5 class="card-title">Litecoin</h5>
+      </li>
+      <li class="nav-item ml-auto mt-1">
+        <a class="nav-link active small" data-toggle="pill" href="#LTC-1M">1M</a>
+      </li>
+      <li class="nav-item mt-1">
+        <a class="nav-link disabled small" data-toggle="pill" href="#LTC-1Y">1Y</a>
+      </li>
+    </ul>
   </div>
-  <div class="panel-body">
-    <div class="tab-pane fade in active">
+
+  <div class="tab-content">
+    <div id="LTC-1M" class="card-body">
       <canvas id="LTCChart"></canvas>
     </div>
   </div>
-  <%= if @current_user do %>
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h4 class="panel-title">
-          <a data-toggle="collapse" href="#ltcNote">Notifications</a>
-        </h4>
-      </div>
 
-      <div id="ltcNote" class="panel-collapse collapse">
-        <ul class="list-group">
-          <%= for notif <- @ltc_notifs do %>
+  <%= if @current_user do %>
+    <div class="card-footer">
+      <div>
+        <a data-toggle="collapse" href="#ltcNote"><b>Notifications</b></a>
+      </div>
+    </div>
+
+    <div id="ltcNote" class="collapse">
+      <ul class="list-group">
+        <%= for notif <- @ltc_notifs do %>
+          <%= if notif.above do %>
             <li class="list-group-item">
-              Threshold: <%= notif.threshold %>
-              Above?: <%= notif.above %>
-              <span><%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs" %>
+              Send me email when the price goes <b>above $<%= notif.threshold %></b>.
+              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs pull-right" %>
+            </li>
+          <% else %>
+            <li class="list-group-item">
+              Send me email when the price goes <b>below $<b><%= notif.threshold %></b>.
+              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs pull-right" %>
             </li>
           <% end %>
-          <li class="list-group-item">
-            <%= render "ltc_notif_form.html", Map.put(assigns, :action, notification_path(@conn, :create)) %>
-          </li>
-        </ul>
-      </div>
+        <% end %>
+
+        <li class="list-group-item">
+          <%= render "ltc_notif_form.html", Map.put(assigns, :action, notification_path(@conn, :create)) %>
+        </li>
+      </ul>
     </div>
   <% end %>
 </div>
