--- a/crypto_tracker/lib/crypto_tracker_web/templates/currency/index.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/currency/index.html.eex
@@ -5,9 +5,14 @@
   .loader {
       margin-top: 50px;
   }
+
+  .left-space {
+    margin-left: 10px;
+  }
 </style>
+
 <!-- BTC CHART -->
-<div class="card">
+<div class="card" >
   <div class="card-header">
     <ul class="nav nav-pills card-header-pills">
       <li class="mt-2 ml-2">
@@ -19,18 +24,25 @@
       <li class="nav-item mt-1">
         <a class="nav-link small" data-toggle="pill" href="#BTC-1Y">1Y</a>
       </li>
+      <li class="nav-item mt-1">
+        <button type="button" class="btn btn-danger toggle-text left-space" id="btc-card-button" data-toggle="collapse" data-target="#BTCCard" aria-controls="BTCCard">
+          <span>Hide</span><span class="hidden">Show</span> BTC
+        </button>
+      </li>
     </ul>
   </div>
 
-  <div class="tab-content">
-    <div class="loader inner" id="btcLoader" align="center"></div>
+  <div class="collapse show" id="BTCCard">
+    <div class="tab-content">
+      <div class="loader inner" id="btcLoader" align="center"></div>
 
-    <div id="BTC-1M" class="card-body tab-pane fade in active show">
-      <canvas id="BTCChart" style="display:none"></canvas>
-    </div>
+      <div id="BTC-1M" class="card-body tab-pane fade in active show">
+        <canvas id="BTCChart" style="display:none"></canvas>
+      </div>
 
-    <div id="BTC-1Y" class="card-body tab-pane fade">
-      <canvas id="BTCChart_yearly" style="display:none"></canvas>
+      <div id="BTC-1Y" class="card-body tab-pane fade">
+        <canvas id="BTCChart_yearly" style="display:none"></canvas>
+      </div>
     </div>
   </div>
 
@@ -78,18 +90,26 @@
       <li class="nav-item mt-1">
         <a class="nav-link small" data-toggle="pill" href="#ETH-1Y">1Y</a>
       </li>
+
+      <li class="nav-item mt-1">
+        <button type="button" class="btn btn-danger toggle-text left-space" id="eth-card-button" data-toggle="collapse" data-target="#ETHCard" aria-controls="ETHCard">
+          <span>Hide</span><span class="hidden">Show</span> ETH
+        </button>
+      </li>
     </ul>
   </div>
 
-  <div class="tab-content">
-    <div class="loader inner" id="ethLoader" align="center"></div>
+  <div class="collapse show" id="ETHCard">
+    <div class="tab-content">
+      <div class="loader inner" id="ethLoader" align="center"></div>
 
-    <div id="ETH-1M" class="card-body tab-pane fade in active show">
-      <canvas id="ETHChart" style="display:none"></canvas>
-    </div>
+      <div id="ETH-1M" class="card-body tab-pane fade in active show">
+        <canvas id="ETHChart" style="display:none"></canvas>
+      </div>
 
-    <div id="ETH-1Y" class="card-body tab-pane fade">
-      <canvas id="ETHChart_yearly" style="display:none"></canvas>
+      <div id="ETH-1Y" class="card-body tab-pane fade">
+        <canvas id="ETHChart_yearly" style="display:none"></canvas>
+      </div>
     </div>
   </div>
 
@@ -125,7 +145,7 @@
 </div>
 
 <!-- LTC CHART -->
-<div class="card mt-5 mb-5">
+<div class="card mt-4 mb-5">
   <div class="card-header">
     <ul class="nav nav-pills card-header-pills">
       <li class="mt-2 ml-2">
@@ -137,18 +157,26 @@
       <li class="nav-item mt-1">
         <a class="nav-link small" data-toggle="pill" href="#LTC-1Y">1Y</a>
       </li>
+
+      <li class="nav-item mt-1">
+        <button type="button" class="btn btn-danger toggle-text left-space" id="ltc-card-button" data-toggle="collapse" data-target="#LTCCard" aria-controls="LTCCard">
+          <span>Hide</span><span class="hidden">Show</span> LTC
+        </button>
+      </li>
     </ul>
   </div>
 
-  <div class="tab-content">
-    <div class="loader inner" id="ltcLoader" align="center"></div>
+  <div class="collapse show" id="LTCCard">
+    <div class="tab-content">
+      <div class="loader inner" id="ltcLoader" align="center"></div>
 
-    <div id="LTC-1M" class="card-body tab-pane fade in active show">
-      <canvas id="LTCChart" style="display:none"></canvas>
-    </div>
+      <div id="LTC-1M" class="card-body tab-pane fade in active show">
+        <canvas id="LTCChart" style="display:none"></canvas>
+      </div>
 
-    <div id="LTC-1Y" class="card-body tab-pane fade">
-      <canvas id="LTCChart_yearly" style="display:none"></canvas>
+      <div id="LTC-1Y" class="card-body tab-pane fade">
+        <canvas id="LTCChart_yearly" style="display:none"></canvas>
+      </div>
     </div>
   </div>
 
