--- a/crypto_tracker/assets/css/app.scss
+++ b/crypto_tracker/assets/css/app.scss
@@ -19,3 +19,7 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+.form-control {
+    display: inline-block !important;
+}
