--- a/crypto_tracker/lib/crypto_tracker_web/templates/currency/index.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/currency/index.html.eex
@@ -122,16 +122,16 @@
 
     <div id="ethNote" class="collapse">
       <ul class="list-group">
-        <%= for notif <- @eth_notifs do %>
+        <%= for notif <- @btc_notifs do %>
           <%= if notif.above do %>
             <li class="list-group-item">
-              Send me email when the price goes <b>above $<%= notif.threshold %></b>.
-              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs pull-right" %>
+              <text class="mt-3">Send me email when the price goes <b>above $<%= notif.threshold %></b>.</text>
+              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-sm float-right" %>
             </li>
           <% else %>
             <li class="list-group-item">
-              Send me email when the price goes <b>below $<b><%= notif.threshold %></b>.
-              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs pull-right" %>
+              <text class="mt-2">Send me email when the price goes <b>below $<%= notif.threshold %></b>.</text>
+              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-sm float-right" %>
             </li>
           <% end %>
         <% end %>
@@ -189,16 +189,16 @@
 
     <div id="ltcNote" class="collapse">
       <ul class="list-group">
-        <%= for notif <- @ltc_notifs do %>
+        <%= for notif <- @btc_notifs do %>
           <%= if notif.above do %>
             <li class="list-group-item">
-              Send me email when the price goes <b>above $<%= notif.threshold %></b>.
-              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs pull-right" %>
+              <text class="mt-3">Send me email when the price goes <b>above $<%= notif.threshold %></b>.</text>
+              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-sm float-right" %>
             </li>
           <% else %>
             <li class="list-group-item">
-              Send me email when the price goes <b>below $<b><%= notif.threshold %></b>.
-              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-xs pull-right" %>
+              <text class="mt-2">Send me email when the price goes <b>below $<%= notif.threshold %></b>.</text>
+              <%= link "Delete", to: notification_path(@conn, :delete, notif), method: :delete, data: [confirm: "Are you sure?"], class: "btn btn-danger btn-sm float-right" %>
             </li>
           <% end %>
         <% end %>
