--- a/crypto_tracker/lib/crypto_tracker_web/templates/currency/ltc_notif_form.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/currency/ltc_notif_form.html.eex
@@ -5,24 +5,29 @@
     </div>
   <% end %>
 
-  <div class="form-group hidden" type="hidden">
-    <%= text_input f, :currency, class: "form-control display:none", value: "LTC", type: "hidden" %>
-    <%= error_tag f, :currency %>
-  </div>
+  <div class="form-inline">
 
-  <div class="form-group">
-    <%= label f, :threshold, class: "control-label" %>
-    <%= number_input f, :threshold, step: "any", class: "form-control" %>
-    <%= error_tag f, :threshold %>
-  </div>
+    <div class="form-group hidden" type="hidden">
+      <%= text_input f, :currency, class: "form-control display:none", value: "LTC", type: "hidden" %>
+      <%= error_tag f, :currency %>
+    </div>
 
-  <div class="form-group">
-    <%= label f, :above, class: "control-label" %>
-    <%= checkbox f, :above, class: "checkbox" %>
-    <%= error_tag f, :above %>
-  </div>
+    <label class="mr-sm-2" for="btc-select">Send me email when the price goes</label>
 
-  <div class="form-group">
-    <%= submit "Create Notification", class: "btn btn-primary" %>
+    <div class="form-group" id="btc-select">
+      <%= select f, :above, ["above": true, "below": false], class: "select" %>
+      <%= error_tag f, :above %>
+    </div>
+
+    <label class="ml-sm-2" for="btc-price">$</label>
+
+    <div class="form-group ml-2 mr-auto" id="btc-price">
+      <%= number_input f, :threshold, step: "any", class: "form-control input-normal" %>
+      <%= error_tag f, :threshold %>
+    </div>
+
+    <div>
+      <%= submit "Create", class: "form-control btn btn-primary btn-sm" %>
+    </div>
   </div>
 <% end %>
