polish profile page

--- a/crypto_tracker/lib/crypto_tracker_web/templates/currency/eth_notif_form.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/currency/eth_notif_form.html.eex
@@ -8,7 +8,7 @@
   <div class="form-inline">
 
     <div class="form-group hidden" type="hidden">
-      <%= text_input f, :currency, class: "form-control display:none", value: "LTC", type: "hidden" %>
+      <%= text_input f, :currency, class: "form-control display:none", value: "ETH", type: "hidden" %>
       <%= error_tag f, :currency %>
     </div>
 
