--- a/crypto_tracker/lib/crypto_tracker_web/templates/user/edit.html.eex
+++ b/crypto_tracker/lib/crypto_tracker_web/templates/user/edit.html.eex
@@ -1,5 +1,5 @@
-<h2>Edit User</h2>
+<h2>Edit Profile</h2>
 
 <%= render "form.html", Map.put(assigns, :action, user_path(@conn, :update, @user)) %>
 
-<span><%= link "Back", to: user_path(@conn, :index) %></span>
+<span><%= link "Back", to: user_path(@conn, :show, @user.id) %></span>
